syntax = "proto3";
package boilerplate;

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/protobuf/wrappers.proto";

option go_package = "https://github.com/Alexitdv/go-cqrs-boilerplate;boilerplate";

service Boilerplate {
  rpc GetUser(Identifier) returns (User) {
    option (google.api.http) = {
      get: "/v1/users/{uuid}"
    };
  };

  rpc AddUser(User) returns (Identifier) {
    option (google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  };

  rpc DeleteUser(Identifier) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/users/{uuid}"
    };
  };

  rpc UpdateUser(User) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/users"
      body: "*",
      additional_bindings {
        put: "/v1/users/{uuid}",
        body: "*",
      }
    };
  };

  rpc UpdatePassword(UpdatePasswordRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/v1/users/password"
      body: "*",
    };
  };

  rpc Login(LoginRequest) returns (SimpleResponse) {
    option (google.api.http) = {
      post: "/v1/users/login"
      body: "*"
    };
  };
}

message Identifier {
  string uuid = 1;
}

message SimpleResponse {
  string status = 1;
}

message UpdatePasswordRequest {
  string phone = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message User {
  google.protobuf.StringValue uuid = 1;
  google.protobuf.StringValue password = 2;
  google.protobuf.StringValue phone = 3;
  google.protobuf.StringValue name = 4;
  google.protobuf.StringValue lastName = 5;
  google.protobuf.StringValue email = 6;
}

message LoginRequest {
  string phone = 1;
  string password = 2;
}